# vee

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  com.github.avojak.vee.yml  meson.build  run
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak.yml
data/: com.github.avojak.vee.appdata.xml.in.in  meson.build
po/extra/: POTFILES
src/: Application.vala  Emulator.vala  MainLayout.vala  MainWindow.vala  meson.build
src/CHIP8/: Interpreter.vala
src/CHIP8/Audio/: APU.vala
src/CHIP8/Debug/: Dialog.vala
src/CHIP8/Graphics/: PPU.vala
src/CHIP8/Graphics/Widgets/: Display.vala  HeaderBar.vala
src/CHIP8/IO/: Keypad.vala
src/CHIP8/Memory/: MMU.vala
src/CHIP8/Processor/: CPU.vala  Registers.vala
src/DMG/: Emulator.vala
src/DMG/Audio/: APU.vala  SoundRegisters.vala
src/DMG/Graphics/: Display.vala  GraphicsRegisters.vala  LCDC.vala  PPU.vala
src/DMG/IO/: Joypad.vala  SerialPort.vala
src/DMG/Memory/: AddressSpace.vala  BootRom.vala  MMU.vala  RAM.vala  ROM.vala  Timer.vala
src/DMG/Memory/Cartridge/: Cartridge.vala
src/DMG/Processor/: ALU.vala  CPU.vala  FlagRegister.vala  InterruptManager.vala  Jump.vala  Operation.vala  Registers.vala
src/Utils/: BitUtils.vala
src/Widgets/: HeaderBar.vala
src/Widgets/Dialogs/: DebugDialog.vala
test/: ExampleTest.vala  Makefile  TestCase.vala  TestHarness.vala  meson.build
